update structure commit

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+# Ignore config.properties
+config.properties
+
 ### Eclipse ###
 .apt_generated
 .classpath
