--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-db.url=jdbc:mysql://localhost:3306/library_db
+db.url=jdbc:mysql://localhost:3306/biblio
 db.username=root
 db.password=
 
