--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-db.url=jdbc:mysql://localhost:3306/biblio
-db.username=root
-db.password=
+DatabaseConnection.url=jdbc:mysql://localhost:3306/biblio
+DatabaseConnection.username=root
+DatabaseConnection.password=
 
 # Other Configuration
 app.version=1.0.0
