--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-# Database Configuration
+# helper Configuration
 DatabaseConnection.url=jdbc:mysql://localhost:3306/biblio
 DatabaseConnection.username=root
 DatabaseConnection.password=
