add,delete, display book

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 # helper Configuration
-DatabaseConnection.url=jdbc:mysql://localhost:3306/biblio
+DatabaseConnection.url=jdbc:mysql://localhost:3307/biblio
 DatabaseConnection.username=root
-DatabaseConnection.password=
+DatabaseConnection.password=simokandirou1234@
 
 # Other Configuration
 app.version=1.0.0
