--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 # helper Configuration
-DatabaseConnection.url=jdbc:mysql://localhost:3307/biblio
-DatabaseConnection.username=root
+DatabaseConnection.url=jdbc:postgresql://localhost:5432/biblio
+DatabaseConnection.username=postgres
 DatabaseConnection.password=simokandirou1234@
 
 # Other Configuration
